--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
     ext {
         nav_version = "2.3.5"
+        hilt_version = "2.38.1"
 
     }
     repositories {
@@ -11,6 +12,9 @@ buildscript {
         classpath "com.android.tools.build:gradle:7.0.3"
         //Navigation safe args
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+
+        //Hilt
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
     }
 }
 
